--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
           <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
           <ul>
-            <li><a href="/products/Mega Deals/all_html.html"> Mega Deals</a></li>
-            <li><a href="/products/man/all_html.html">Men</a></li>
-            <li><a href="products/Women/all_together_html.html">Women></a></li>
-            <li><a href="/products/kids/all_together_html.html">kids</a></li>
-            <li><a href="/products/sports/all_together_html.html ">sports</a></li>
+            <li><a href="products/Mega Deals/all_html.html"> Mega Deals</a></li>
+            <li><a href="products/man/all_html.html">Men</a></li>
+            <li><a href="products/Women/all_together_html.html">Women</a></li>
+            <li><a href="products/kids/all_together_html.html">kids</a></li>
+            <li><a href="products/sports/all_together_html.html ">sports</a></li>
             <li><a href="#">Travel</a></li>
-            <li><a href="/products/Accessories/all_together_html.html">Accessories</a></li>
-            <li><a href="/auth/contract.html    ">Contact</a></li>
+            <li><a href="products/Accessories/all_together_html.html">Accessories</a></li>
+            <li><a href="auth/contract.html    ">Contact</a></li>
           </ul>
         </div>
         <!-- Search Form -->
