--- a/products/sports/all_together_html.html
+++ b/products/sports/all_together_html.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
