--- a/products/sports/all_together_html.html
+++ b/products/sports/all_together_html.html
@@ -17,9 +17,9 @@
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
-          <li><a href="/products/man/">Men</a></li>
+          <li><a href="products/man/">Men</a></li>
           <li><a href="#">Women</a></li>
-          <li><a href="/products/man.html">kids</a></li>
+          <li><a href="products/man.html">kids</a></li>
           <li><a href="#">sports</a></li>
           <li><a href="#">New Arrivals</a></li>
           <li><a href="#">Accessories</a></li>
@@ -39,8 +39,8 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
       <div class="nav-right">
-        <a href="/auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
-        <a href="/auth/sin_in.html">Sign In</a>
+        <a href="auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
+        <a href="auth/sin_in.html">Sign In</a>
         <!-- <a href="/auth/profile.html"><i class="fa-solid fa-user"></i></a>  -->
              <a href="#" id="profileTrigger"><i class="fa-solid fa-user"></i></a>
 
@@ -53,8 +53,8 @@
     
     <section class="categories">
         <div class="category">
-          <a href="/products/sports/pd_serial_html/p_1.html">
-            <img src="/products/sports/pd_img/p_1.jpg" alt="Air Jordan 4 White">
+          <a href="products/sports/pd_serial_html/p_1.html">
+            <img src="products/sports/pd_img/p_1.jpg" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk4,999</span>
