--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <div class="nav-left">
-          <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+          <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
           <ul>
             <li><a href="products/Mega Deals/all_html.html"> Mega Deals</a></li>
@@ -54,8 +54,8 @@
     <!--category -->
     <section class="shop-sections">
       <div class="card">
-        <a href="/products/man/all_html.html">
-          <img src="/asstes/category-6/ca7.png" alt="Men Collection">
+        <a href="products/man/all_html.html">
+          <img src="asstes/category-6/ca7.png" alt="Men Collection">
         </a>
         <div class="card-overlay">
         </div>
@@ -63,7 +63,7 @@
 
       <div class="card">
         <a href="#">
-          <img src="/asstes/category-6/ca2.png" alt="Women Collection">
+          <img src="asstes/category-6/ca2.png" alt="Women Collection">
         </a>
         <div class="card-overlay">
         </div>
@@ -71,7 +71,7 @@
 
       <div class="card">
         <a href="#">
-          <img src="/asstes/category-6/ca3.png" alt="Upcoming">
+          <img src="asstes/category-6/ca3.png" alt="Upcoming">
         </a>
         <div class="card-overlay">
         </div>
@@ -79,7 +79,7 @@
 
       <div class="card">
         <a href="#">
-          <img src="/asstes/category-6/ca8.png" alt="Accessories">
+          <img src="asstes/category-6/ca8.png" alt="Accessories">
         </a>
         <div class="card-overlay">
         </div>
@@ -87,7 +87,7 @@
 
       <div class="card">
         <a href="#">
-          <img src="/asstes/category-6/ca11.png" alt="Travel">
+          <img src="asstes/category-6/ca11.png" alt="Travel">
         </a>
         <div class="card-overlay">
           <h3>TRAVEL MATES</h3>
@@ -97,7 +97,7 @@
 
       <div class="card">
         <a href="#">
-          <img src="/asstes/category-6/ca4.gif" alt="Appointment">
+          <img src="asstes/category-6/ca4.gif" alt="Appointment">
         </a>
         <div class="card-overlay">
           <h3>APPOINTMENT</h3>
