--- a/auth/contract.html
+++ b/auth/contract.html
@@ -29,10 +29,10 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      padding: 40px;
+      padding: 200px;
       background: #fff;
       max-width: 1200px;
-      margin: 50px auto;
+      margin: 4px auto;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
       transition: 0.4s ease;
@@ -139,6 +139,7 @@
       color: #fff;
       padding: 12px;
       border: none;
+      margin-right: -30px;
       border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
