--- a/products/Accessories/all_together_html.html
+++ b/products/Accessories/all_together_html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Home/index.css">
+    <link rel="stylesheet"href="Home/index.css">
     <link rel="stylesheet" href="products/products.css">
 </head>
 <body>
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="asstes/images/product-1.webp" alt="Air Jordan 4 White">
+            <img src="#" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
@@ -150,8 +150,6 @@
             <span class="old-price">Tk3899</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
-      
-
     </section>
 
 
