--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -17,9 +17,9 @@
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
-          <li><a href="/products/man/">Men</a></li>
+          <li><a href="products/man/">Men</a></li>
           <li><a href="#">Women</a></li>
-          <li><a href="/products/man.html">kids</a></li>
+          <li><a href="products/man.html">kids</a></li>
           <li><a href="#">sports</a></li>
           <li><a href="#">New Arrivals</a></li>
           <li><a href="#">Accessories</a></li>
