hero banner html ,css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     </header>
 
     <!-- Hero Banner -->
-    <section class="promo"></section>
+<section class="promo" 
+         style="background: url('asstes/banner/up-2.png') center/cover no-repeat;">
+         <a href="#shop" class="btn">Shop Now</a>
+</section>
 
     <!--category -->
     <section class="shop-sections">
