hero banner 2 change

--- a/index.html
+++ b/index.html
@@ -255,8 +255,10 @@
       </div>
     </section>
     <!-- Hero Banner 2 -->
-    <section class="promo-2"></section>
-
+<section class="promo-2" 
+         style="background: url('asstes/banner/up-4.png') center/cover no-repeat;">
+         <a href="#shop" class="btn">Shop Now</a>
+</section>
     <footer>
       <div class="footer-top">
         <div>
