--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="categories">
       <div class="category">
         <a href="/products/man/pd_serial_html/pd_no-1.html">
-          <img src="/products/man/pd_img/p-2.jpg" alt="Air Jordan 4 White">
+          <img src="products/man/pd_img/p-2.jpg">
           <h7>Mindful Grey </h7>
           <p>Moonbeam and Sea Salt</p><br>
           <span class="new-price">Tk 3499</span>
@@ -154,61 +154,56 @@
         <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="https://i.postimg.cc/Gm1bS4Qf/photo-2024-08-12-10-33-27.jpg" alt="Air Jordan 4">
-        <h7>Air Jordan 4</h7>
+        <img src="products/man/pd_img/p-7.jpg" alt="#">
+        <h7>ADIDAS BEASTMODE</h7>
         <p>Rubber outsole</p><br>
-        <span class="new-price">Tk 3499</span>
-        <span class="old-price">Tk 3999</span>
-        <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
+        <span class="new-price">Tk 10999</span>
+        <button onclick="addToCart('ADIDAS BEASTMODE')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="https://i.postimg.cc/Hsmp6J3h/photo-2024-07-09-10-43-32.jpg" alt="Lacoste">
-        <h7>Lacoste </h7>
-        <p>Perfect sportswear collection </p><br>
-        <span class="new-price">Tk 3499</span>
-        <span class="old-price">Tk 3999</span>
-        <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
+        <img src="/products/man/pd_img/p-8.jpg" alt="Lacoste">
+        <h7>ADIDAS ALPHABOOST V2 </h7>
+        <p>SPORTS SNEAKER</p><br>
+        <span class="new-price">Tk 15999</span>
+        <button onclick="addToCart('ADIDAS ALPHABOOST V2')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="https://i.postimg.cc/hvBqZw8d/photo-2024-08-12-10-17-16.jpg" alt="Air Jordan 4 White">
-        <h7>Air Jordan 4 </h7>
-        <p>Exclusive & stylish</p><br>
+        <img src="/products/man/pd_img/p-9.jpg" alt="Air Jordan 4 White">
+        <h7>Bata DRIVER  </h7>
+        <p>Rubber Loafer</p><br>
         <span class="new-price">Tk 3499</span>
         <span class="old-price">Tk 3999</span>
         <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="https://i.postimg.cc/4NRTZw23/photo-2024-10-07-12-11-56.jpgg" alt="Air Jordan 4 White">
-        <h7>Air Color – White</h7>
-        <p>Running or sports sneakers</p><br>
-        <span class="new-price">Tk 3499</span>
-        <span class="old-price">Tk 3999</span>
+        <img src="/products/man/pd_img/p-10.jpg" alt="Air Jordan 4 White">
+        <h7>Bata Men's Casual </h7>
+        <p>GLOBE Sneaker</p><br>
+        <span class="new-price">Tk 3899</span>
         <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
-        <h7>Men's Collection</h7>
-        <p>Stylish shoes for men</p><br><br>
-        <span class="new-price">Tk 3499</span>
-        <span class="old-price">Tk 3999</span>
+        <img src="/products/man/pd_img/p-12.jpg" alt="Men's Shoes">
+        <h7>Bata Men's Casual </h7>
+        <p>GLOBE Sneaker</p><br><br>
+        <span class="new-price">Tk 1899</span>
         <button onclick="addToCart('Men\'s Collection')">Add to Cart</button>
       </div>
       <div class="category">
         <a href="products/sports/all_together_html.html">
-          <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
-          <h7>Men's Collection</h7>
-          <p>Stylish shoes for men</p><br><br>
+          <img src="/products/man/pd_img/p-14.jpg" alt="Men's Shoes">
+          <h7>HUSH PUPPIES M562</h7>
+          <p>MENS HP CLOSED LOAFER</p><br><br>
           <span class="new-price">Tk 3499</span>
           <span class="old-price">Tk 3999</span>
           <button onclick="addToCart('Men\'s Collection')">Add to Cart</button>
         </a>
       </div>
       <div class="category">
-        <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
-        <h7>Men's Collection</h7>
-        <p>Stylish shoes for men</p><br><br>
-        <span class="new-price">Tk 3499</span>
-        <span class="old-price">Tk 3999</span>
+        <img src="/products/man/pd_img/pd-15.webp" alt="Men's Shoes">
+        <h7>POWER DUOFOAM</h7>
+        <p> MENS SPORTS SNEAKER</p><br><br>
+        <span class="new-price">Tk 4699</span>
         <button onclick="addToCart('Men\'s Collection')">Add to Cart</button>
       </div>
 
