--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
         <button onclick="addToCart('ADIDAS BEASTMODE')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="/products/man/pd_img/p-8.jpg" alt="Lacoste">
+        <img src="products/man/pd_img/p-8.jpg" alt="Lacoste">
         <h7>ADIDAS ALPHABOOST V2 </h7>
         <p>SPORTS SNEAKER</p><br>
         <span class="new-price">Tk 15999</span>
         <button onclick="addToCart('ADIDAS ALPHABOOST V2')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="/products/man/pd_img/p-9.jpg" alt="Air Jordan 4 White">
+        <img src="products/man/pd_img/p-9.jpg" alt="Air Jordan 4 White">
         <h7>Bata DRIVER  </h7>
         <p>Rubber Loafer</p><br>
         <span class="new-price">Tk 3499</span>
@@ -176,14 +176,14 @@
         <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="/products/man/pd_img/p-10.jpg" alt="Air Jordan 4 White">
+        <img src="products/man/pd_img/p-10.jpg" alt="Air Jordan 4 White">
         <h7>Bata Men's Casual </h7>
         <p>GLOBE Sneaker</p><br>
         <span class="new-price">Tk 3899</span>
         <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
       </div>
       <div class="category">
-        <img src="/products/man/pd_img/p-12.jpg" alt="Men's Shoes">
+        <img src="products/man/pd_img/p-12.jpg" alt="Men's Shoes">
         <h7>Bata Men's Casual </h7>
         <p>GLOBE Sneaker</p><br><br>
         <span class="new-price">Tk 1899</span>
@@ -200,7 +200,7 @@
         </a>
       </div>
       <div class="category">
-        <img src="/products/man/pd_img/pd-15.webp" alt="Men's Shoes">
+        <img src="products/man/pd_img/pd-15.webp" alt="Men's Shoes">
         <h7>POWER DUOFOAM</h7>
         <p> MENS SPORTS SNEAKER</p><br><br>
         <span class="new-price">Tk 4699</span>
