--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -13,13 +13,13 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
-          <li><a href="/products/man/">Men</a></li>
+          <li><a href="products/man/">Men</a></li>
           <li><a href="#">Women</a></li>
-          <li><a href="/products/man.html">kids</a></li>
+          <li><a href="products/man.html">kids</a></li>
           <li><a href="#">sports</a></li>
           <li><a href="#">New Arrivals</a></li>
           <li><a href="#">Accessories</a></li>
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="/asstes/images/product-1.webp" alt="Air Jordan 4 White">
+            <img src="products/man/pd_img/p-8.jpg" alt="Products not found">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
@@ -94,7 +94,7 @@
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Gm1bS4Qf/photo-2024-08-12-10-33-27.jpg" alt="Air Jordan 4">
+            <img src="/products/man/pd_img/p-12.jpg" alt="Air Jordan 4">
             <h4>Air Jordan 4</h4>
             <p>Rubber outsole & lace-up closure sneakers</p><br>
             <span class="new-price">Tk3499</span>
@@ -102,7 +102,7 @@
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Hsmp6J3h/photo-2024-07-09-10-43-32.jpg" alt="Lacoste">
+            <img src="/products/man/pd_img/p-13.jpg" alt="Lacoste">
             <h4>Lacoste || Color – Black & White</h4>
             <p>Perfect sportswear collection for trainers, walking, running</p><br>
             <span class="new-price">Tk3499</span>
@@ -110,23 +110,23 @@
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/hvBqZw8d/photo-2024-08-12-10-17-16.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor</p><br>
+            <img src="/products/Women/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
+            <h4>Women Color – White</h4>
+            <p>Women shoe</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/4NRTZw23/photo-2024-10-07-12-11-56.jpgg" alt="Air Jordan 4 White">
-            <h4>Air || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor, running or sports sneakers</p><br>
+            <img src="/products/kids/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
+            <h4>kid's shoe</h4>
+            <p>Comfortable</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
+            <img src="/products/man/pd_img/pd-15.webp" alt="Men's Shoes">
             <h3>Men's Collection</h3>
             <p>Stylish shoes for men</p><br><br>
             <span class="new-price">Tk3499</span>
@@ -135,16 +135,16 @@
         </div>
 
         <div class="category">
-            <img src="https://i.postimg.cc/SR2Q5sKt/photo1712123045.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 6 || Colour - White || Low Neck || </h4>
+            <img src="/products/kids/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
+            <h4>Kids collection  </h4>
             <p>Trendy and stylish</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <span class="new-price">Tk2199</span>
+            <span class="old-price">Tk2599</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/x1cr37ct/photo1711860879.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color - Red || High Neck || </h4>
+            <img src="/products/Women/pd-sserial/2_d3426e31-1ba1-4af6-b8a1-49fdeeb2e82c_300x.jpg" alt="Air Jordan 4 White">
+            <h4>Women collectin </h4>
             <p>Comfortable & fashionable</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3899</span>
