link sign up and profile

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="products/sports/all_together_html.html ">sports</a></li>
             <li><a href="#">Travel</a></li>
             <li><a href="products/Accessories/all_together_html.html">Accessories</a></li>
-            <li><a href="auth/contract.html    ">Contact</a></li>
+            <li><a href="auth/contract.html">Contact</a></li>
           </ul>
         </div>
         <!-- Search Form -->
@@ -40,8 +40,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
         <div class="nav-right">
-          <a href="/auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
-          <a href="/auth/sin_in.html">Sign In</a>
+          <a href="auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
+          <a href="auth/sin_in.html">Sign In</a>
           <!-- <a href="/auth/profile.html"><i class="fa-solid fa-user"></i></a>  -->
           <a href="#" id="profileTrigger"><i class="fa-solid fa-user"></i></a>
         </div>
