--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="products/man/pd_img/p-8.jpg" alt="Products not found">
+            <img src="/products/man/pd_img/p-8.jpg" alt="Products not found">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
