--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Home/index.css">
-    <link rel="stylesheet" href="products/products.css">
+    <link rel="stylesheet" href="/Home/index.css">
+    <link rel="stylesheet" href="../products.css">
 </head>
 <body>
 <div class="profile-overlay" id="profileOverlay"></div>
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
