--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="/products/man/pd_img/p-8.jpg" alt="Products not found">
+            <img src="products/man/pd_img/p-8.jpg" alt="Products not found">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
