--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="products/man/pd_img/p-8.jpg" alt="Products not found">
+            <img src="/products/man/pd_img/p-8.jpg" alt="Products not found">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
@@ -126,7 +126,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/man/pd_img/pd-15.webp" alt="Men's Shoes">
+            <img src="../products/man/pd_img/pd-15.webp" alt="Men's Shoes">
             <h3>Men's Collection</h3>
             <p>Stylish shoes for men</p><br><br>
             <span class="new-price">Tk3499</span>
