--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -126,7 +126,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="../products/man/pd_img/pd-15.webp" alt="Men's Shoes">
+            <img src="../../products/man/pd_img/pd-15.webp" alt="Men's Shoes">
             <h3>Men's Collection</h3>
             <p>Stylish shoes for men</p><br><br>
             <span class="new-price">Tk3499</span>
