--- a/products/Mega Deals/all_html.html
+++ b/products/Mega Deals/all_html.html
@@ -94,7 +94,7 @@
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/man/pd_img/p-12.jpg" alt="Air Jordan 4">
+            <img src="../../products/man/pd_img/p-12.jpg" alt="Air Jordan 4">
             <h4>Air Jordan 4</h4>
             <p>Rubber outsole & lace-up closure sneakers</p><br>
             <span class="new-price">Tk3499</span>
@@ -102,7 +102,7 @@
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/man/pd_img/p-13.jpg" alt="Lacoste">
+            <img src="../../products/man/pd_img/p-13.jpg" alt="Lacoste">
             <h4>Lacoste || Color – Black & White</h4>
             <p>Perfect sportswear collection for trainers, walking, running</p><br>
             <span class="new-price">Tk3499</span>
@@ -110,7 +110,7 @@
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/Women/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/Women/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
             <h4>Women Color – White</h4>
             <p>Women shoe</p><br>
             <span class="new-price">Tk3499</span>
@@ -118,7 +118,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/kids/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/kids/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
             <h4>kid's shoe</h4>
             <p>Comfortable</p><br>
             <span class="new-price">Tk3499</span>
@@ -135,7 +135,7 @@
         </div>
 
         <div class="category">
-            <img src="/products/kids/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/kids/pd_img/pd-2.jpg" alt="Air Jordan 4 White">
             <h4>Kids collection  </h4>
             <p>Trendy and stylish</p><br>
             <span class="new-price">Tk2199</span>
@@ -143,7 +143,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/Women/pd-sserial/2_d3426e31-1ba1-4af6-b8a1-49fdeeb2e82c_300x.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/Women/pd-sserial/2_d3426e31-1ba1-4af6-b8a1-49fdeeb2e82c_300x.jpg" alt="Air Jordan 4 White">
             <h4>Women collectin </h4>
             <p>Comfortable & fashionable</p><br>
             <span class="new-price">Tk3499</span>
