--- a/products/man/all_html.html
+++ b/products/man/all_html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Home/index.css">
-    <link rel="stylesheet" href="/products/products.css">
+    <link rel="stylesheet" href="../Home/index.css">
+    <link rel="stylesheet" href="../products/products.css">
 </head>
 <body>
 <div class="profile-overlay" id="profileOverlay"></div>
