--- a/products/man/all_html.html
+++ b/products/man/all_html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../Home/index.css">
+    <link rel="stylesheet" href="../../Home/index.css">
     <link rel="stylesheet" href="../products/products.css">
 </head>
 <body>
@@ -13,13 +13,13 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="../../asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
-          <li><a href="/products/man/">Men</a></li>
+          <li><a href="../../products/man/all_html.html">Men</a></li>
           <li><a href="#">Women</a></li>
-          <li><a href="/products/man.html">kids</a></li>
+          <li><a href="../../products/kids/all_together_html.html">kids</a></li>
           <li><a href="#">sports</a></li>
           <li><a href="#">New Arrivals</a></li>
           <li><a href="#">Accessories</a></li>
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="/asstes/images/product-1.webp" alt="Air Jordan 4 White">
+            <img src="../../products/man/pd_img/p-12.jpg" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
