--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../../Home/index.css">
-    <link rel="stylesheet" href="/products/products.css">
+    <link rel="stylesheet" href="../products/products.css">
 </head>
 <body>
 <div class="profile-overlay" id="profileOverlay"></div>
