--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="card">
-        <a href="#">
+        <a href="products/Women/all_together_html.html">
           <img src="asstes/category-6/ca2.png" alt="Women Collection">
         </a>
         <div class="card-overlay">
@@ -73,7 +73,7 @@
       </div>
 
       <div class="card">
-        <a href="#">
+        <a href="products/kids/all_together_html.html">
           <img src="asstes/category-6/ca3.png" alt="Upcoming">
         </a>
         <div class="card-overlay">
