--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
     <section class="categories">
       <div class="category">
-        <a href="/products/man/pd_serial_html/pd_no-1.html">
+        <a href="products/man/pd_serial_html/p_1.html">
           <img src="products/man/pd_img/p-2.jpg">
           <h7>Mindful Grey </h7>
           <p>Moonbeam and Sea Salt</p><br>
           <span class="new-price">Tk 3499</span>
           <span class="old-price">Tk 3999</span>
-          <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
-        </a>
+          <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button></a>
+        
       </div>
 
       <div class="category">
