--- a/products/man/pd_serial_html/p_1.html
+++ b/products/man/pd_serial_html/p_1.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
-  <link rel="stylesheet" href="../../../Home/index.css">
-  <link rel="stylesheet" href="../products/products.css">
+  <link rel="stylesheet" href="/Home/index.css">
+  <link rel="stylesheet" href="/products/products.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
     <div class="container">
       <!-- Left: Product Images -->
       <div class="product-images">
-        <img src="../products/man/pd_img/p-2.jpg" alt="Main Product">
+        <img src="/products/man/pd_img/p-2.jpg" alt="Main Product">
       </div>
 
       <!-- Right: Product Details -->
