--- a/products/kids/all_together_html.html
+++ b/products/kids/all_together_html.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="../asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
@@ -53,7 +53,7 @@
     
     <section class="categories">
         <div class="category">
-            <img src="/asstes/images/product-1.webp" alt="Air Jordan 4 White">
+            <img src="../kids/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
