--- a/auth/contract.html
+++ b/auth/contract.html
@@ -8,7 +8,6 @@
   <!-- Google Font & Font Awesome -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="../Home/index.css">
 
   <style>
     :root {
@@ -152,6 +151,36 @@
       background: var(--secondary);
       transform: scale(1.02);
     }
+    footer {
+    background-color: white;
+    color: black;
+    padding: 40px 20px;
+    }
+    footer h3 {
+    margin-bottom: 10px;
+    }
+    footer p {
+    font-size: 14px;
+    margin-bottom: 5px;
+    }
+    .footer-top {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    }
+    .footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    flex-wrap: wrap;
+    }
+
+.footer-bottom img {
+    width: 40px;
+    margin-left: 10px;
+}
 
     @media (max-width: 800px) {
       .container {
@@ -163,50 +192,21 @@
       .form-container {
         padding: 25px;
       }
+      .footer-top {
+        flex-direction: column;
     }
+
+    .footer-bottom {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+      
+  }
   </style>
 </head>
 
 <body>
-  
-  <div class="profile-overlay" id="profileOverlay"></div>
-  <div class="profile-sidebar" id="profileSidebar">
-    <header>
-      <nav>
-        <div class="nav-left">
-          <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
-
-          <ul>
-            <li><a href="products/Mega Deals/all_html.html"> Mega Deals</a></li>
-            <li><a href="products/man/all_html.html">Men</a></li>
-            <li><a href="products/Women/all_together_html.html">Women</a></li>
-            <li><a href="products/kids/all_together_html.html">kids</a></li>
-            <li><a href="products/sports/all_together_html.html ">sports</a></li>
-            <li><a href="#">Travel</a></li>
-            <li><a href="products/Accessories/all_together_html.html">Accessories</a></li>
-            <li><a href="auth/contract.html">Contact</a></li>
-          </ul>
-        </div>
-        <!-- Search Form -->
-        <form class="search-form" onsubmit="return false;">
-          <input type="text" placeholder="Search products...">
-          <button type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </form>
-
-        <!-- Font Awesome CDN (add inside <head>) -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-        <div class="nav-right">
-          <a href="auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
-          <a href="auth/sin_in.html">Sign In</a>
-          <!-- <a href="/auth/profile.html"><i class="fa-solid fa-user"></i></a>  -->
-          <a href="#" id="profileTrigger"><i class="fa-solid fa-user"></i></a>
-        </div>
-      </nav>
-    </header>
-
   <div class="container">
     <div class="contact-info">
       <h2>Get in Touch</h2>
@@ -298,7 +298,6 @@
         </div>
       </div>
     </footer>
-
   <script>
     const form = document.getElementById('contactForm');
     form.addEventListener('submit', function(e) {
