--- a/products/sports/all_together_html.html
+++ b/products/sports/all_together_html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Home/index.css">
-    <link rel="stylesheet" href="products/products.css">
+    <link rel="stylesheet" href="../../Home/index.css">
+    <link rel="stylesheet" href="../../products/products.css">
 </head>
 <body>
 <div class="profile-overlay" id="profileOverlay"></div>
@@ -13,12 +13,12 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="../../asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
-          <li><a href="products/man/">Men</a></li>
-          <li><a href="#">Women</a></li>
+          <li><a href="../../products/man/">Men</a></li>
+          <li><a href="#">../../Women</a></li>
           <li><a href="products/man.html">kids</a></li>
           <li><a href="#">sports</a></li>
           <li><a href="#">New Arrivals</a></li>
@@ -53,8 +53,8 @@
     
     <section class="categories">
         <div class="category">
-          <a href="products/sports/pd_serial_html/p_1.html">
-            <img src="products/sports/pd_img/p_1.jpg" alt="Air Jordan 4 White">
+          <a href="../../products/sports/pd_serial_html/p_1.html">
+            <img src="../../products/sports/pd_img/p_1.jpg" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk4,999</span>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="category">
-          <a href="/products/sports/pd_serial_html/p_2.html"> 
+          <a href="../../products/sports/pd_serial_html/p_2.html"> 
             <img src="/products/sports/pd_img/p_2.jpg" alt="Women's Shoes">
             <h3>Women's Collection</h3>
             <p>Trendy shoes for women</p><br>
@@ -72,7 +72,7 @@
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button></a>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_3.jpg" alt="Kids' Shoes">
+            <img src="../../products/sports/pd_img/p_3.jpg" alt="Kids' Shoes">
             <h3>Kids' Collection</h3>
             <p>Comfortable shoes for kids</p><br>
             <span class="new-price">Tk3499</span>
@@ -80,7 +80,7 @@
             <button onclick="addToCart('Kids\' Collection')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p__4.jpg" alt="Accessories">
+            <img src="../../products/sports/pd_img/p__4.jpg" alt="Accessories">
             <h3>Accessories</h3>
             <p>Bags, socks & more</p><br>
             <span class="new-price">Tk3499</span>
@@ -88,7 +88,7 @@
             <button onclick="addToCart('Accessories')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_5.jpg" alt="Girls Kids Sandal">
+            <img src="../../products/sports/pd_img/p_5.jpg" alt="Girls Kids Sandal">
             <h4>GIRLS KIDS SANDAL</h4>
             <p>GIRLS KIDS SANDAL</p><br>
             <span class="new-price">Tk3499</span>
@@ -96,7 +96,7 @@
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_6.jpg" alt="Air Jordan 4">
+            <img src="../../products/sports/pd_img/p_6.jpg" alt="Air Jordan 4">
             <h4>Air Jordan 4</h4>
             <p>Rubber outsole & lace-up closure sneakers</p><br>
             <span class="new-price">Tk3499</span>
@@ -104,7 +104,7 @@
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_7.jpg" alt="Lacoste">
+            <img src="../../products/sports/pd_img/p_7.jpg" alt="Lacoste">
             <h4>Lacoste || Color – Black & White</h4>
             <p>Perfect sportswear collection for trainers, walking, running</p><br>
             <span class="new-price">Tk3499</span>
@@ -112,7 +112,7 @@
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_8.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/sports/pd_img/p_8.jpg" alt="Air Jordan 4 White">
             <h4>Air Jordan 4 || Color – White</h4>
             <p>Exclusive & stylish, perfect for casual outdoor</p><br>
             <span class="new-price">Tk3499</span>
@@ -120,7 +120,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_9.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/sports/pd_img/p_9.jpg" alt="Air Jordan 4 White">
             <h4>Air || Color – White</h4>
             <p>Exclusive & stylish, perfect for casual outdoor, running or sports sneakers</p><br>
             <span class="new-price">Tk3499</span>
@@ -128,7 +128,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_10.jpg" alt="Men's Shoes">
+            <img src="../../products/sports/pd_img/p_10.jpg" alt="Men's Shoes">
             <h3>Men's Collection</h3>
             <p>Stylish shoes for men</p><br><br>
             <span class="new-price">Tk3499</span>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="category">
-            <img src="/products/sports/pd_img/p_11.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/sports/pd_img/p_11.jpg" alt="Air Jordan 4 White">
             <h4>Air Jordan 6 || Colour - White || Low Neck || </h4>
             <p>Trendy and stylish</p><br>
             <span class="new-price">Tk3499</span>
@@ -145,7 +145,7 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="/products/sports/pd_img/p_12.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/sports/pd_img/p_12.jpg" alt="Air Jordan 4 White">
             <h4>Air Jordan 4 || Color - Red || High Neck || </h4>
             <p>Comfortable & fashionable</p><br>
             <span class="new-price">Tk3499</span>
