--- a/products/sports/all_together_html.html
+++ b/products/sports/all_together_html.html
@@ -19,10 +19,10 @@
 
           <ul>
             <li><a href="#"> Mega Deals</a></li>
-            <li><a href="../../products/man/">Men</a></li>
-            <li><a href="#">../../Women</a></li>
+            <li><a href="../../products/man/all_html.html">Men</a></li>
+            <li><a href="../../products/Women/all_together_html.html">Women</a></li>
             <li><a href="products/man.html">kids</a></li>
-            <li><a href="#">sports</a></li>
+            <li><a href="/products/sports/all_together_html.html">sports</a></li>
             <li><a href="#">New Arrivals</a></li>
             <li><a href="#">Accessories</a></li>
 
