--- a/products/sports/pd_serial_html/p_2.html
+++ b/products/sports/pd_serial_html/p_2.html
@@ -52,7 +52,7 @@
     <div class="container">
       <!-- Left: Product Images -->
       <div class="product-images">
-        <img src="../../products/sports/pd_img/p_2.jpg" alt="Main Product">
+        <img src="../../../products/sports/pd_img/p_2.jpg" alt="Main Product">
       </div>
 
       <!-- Right: Product Details -->
