--- a/products/Accessories/all_together_html.html
+++ b/products/Accessories/all_together_html.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet"href="Home/index.css">
-    <link rel="stylesheet" href="products/products.css">
+    <link rel="stylesheet"href="../../Home/index.css">
+    <link rel="stylesheet" href="../../products/products.css">
 </head>
 <body>
 <div class="profile-overlay" id="profileOverlay"></div>
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="nav-left">
-        <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+        <img src="../../asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
         <ul>
           <li><a href="#"> Mega Deals</a></li>
@@ -53,28 +53,22 @@
     
     <section class="categories">
         <div class="category">
-            <img src="#" alt="Air Jordan 4 White">
-            <h4>MINDFUL GREY</h4>
-            <p>MOONBEAM and Sea Salt</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/HnVxSc60/243b6355-01d7-4c09-a221-4b6f52922bd1.jpg" alt="Air Jordan 4 White">
+            <h4>Men’s Wallet</h4>
+            <span class="new-price">Tk999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
 
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/6313196_2_300x.jpg?v=1756803275" alt="Women's Shoes">
-            <h3>Women's Collection</h3>
-            <p>Trendy shoes for women</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/HnVxSc60/243b6355-01d7-4c09-a221-4b6f52922bd1.jpg" alt="Women's Shoes">
+            <h3>Men’s Wallet</h3>
+            <span class="new-price">Tk899</span>
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/0315103_1_1024x1024.jpg?v=1756785469" alt="Kids' Shoes">
-            <h3>Kids' Collection</h3>
-            <p>Comfortable shoes for kids</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/KjMKG3BD/4e0adf65-2148-4bbf-b38c-38ade04b73c1.jpg" alt="Kids' Shoes">
+            <h3> Men's Belt</h3>
+            <span class="new-price">Tk1299</span>
             <button onclick="addToCart('Kids\' Collection')">Add to Cart</button>
         </div>
         <div class="category">
@@ -86,68 +80,52 @@
             <button onclick="addToCart('Accessories')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/3618950_2_300x.jpg?v=1756786785" alt="Girls Kids Sandal">
-            <h4>GIRLS KIDS SANDAL</h4>
-            <p>GIRLS KIDS SANDAL</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/52Nzh3sJ/903bba9e-da1e-4746-8b75-28c9d86f7157.jpg" alt="Girls Kids Sandal">
+            <h4> Men's BeltL</h4>
+            <span class="new-price">Tk1699</span>
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Gm1bS4Qf/photo-2024-08-12-10-33-27.jpg" alt="Air Jordan 4">
-            <h4>Air Jordan 4</h4>
-            <p>Rubber outsole & lace-up closure sneakers</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/0yBzLq6m/0954b45c-1eb6-4dc4-acac-51065d1aa235.jpg" alt="Air Jordan 4">
+            <h4> Men's Belt</h4>
+            <span class="new-price">Tk1599</span>
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Hsmp6J3h/photo-2024-07-09-10-43-32.jpg" alt="Lacoste">
-            <h4>Lacoste || Color – Black & White</h4>
-            <p>Perfect sportswear collection for trainers, walking, running</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/LXB66dst/07110A28-new-1.jpg" alt="Lacoste">
+            <h4> Men's Belt/h4>
+            <span class="new-price">Tk1199</span>
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/hvBqZw8d/photo-2024-08-12-10-17-16.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/VvZwdzPW/07116A49-new-3.jpg" alt="Air Jordan 4 White">
+            <h4>Men’s Wallet</h4>
+            <span class="new-price">Tk699</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/4NRTZw23/photo-2024-10-07-12-11-56.jpgg" alt="Air Jordan 4 White">
-            <h4>Air || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor, running or sports sneakers</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/5yLGM19r/07110A40-new-1.jpg" alt="Air Jordan 4 White">
+            <h4> Men's Belt</h4>
+            <span class="new-price">Tk1299</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
-            <h3>Men's Collection</h3>
-            <p>Stylish shoes for men</p><br><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/ZnSHpN4q/09517A33-1.jpg" alt="Men's Shoes">
+            <h3>Maverick Men's Backpack</h3>
+            <span class="new-price">Tk2599</span>
             <button onclick="addToCart('Men\'s Collection')">Add to Cart</button>
         </div>
 
         <div class="category">
-            <img src="https://i.postimg.cc/SR2Q5sKt/photo1712123045.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 6 || Colour - White || Low Neck || </h4>
-            <p>Trendy and stylish</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/HkVwJzXk/09597A33-1.jpg" alt="Air Jordan 4 White">
+            <h4>Maverick Men's Backpack </h4>
+            <span class="new-price">Tk2599</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/x1cr37ct/photo1711860879.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color - Red || High Neck || </h4>
-            <p>Comfortable & fashionable</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3899</span>
+            <img src="https://i.postimg.cc/CxqZTQjT/09546A63-new-4.jpg" alt="Air Jordan 4 White">
+            <h4>Men's Backpack </h4>
+            <span class="new-price">Tk2999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
     </section>
