--- a/products/Accessories/all_together_html.html
+++ b/products/Accessories/all_together_html.html
@@ -60,9 +60,9 @@
         </div>
 
         <div class="category">
-            <img src="https://i.postimg.cc/HnVxSc60/243b6355-01d7-4c09-a221-4b6f52922bd1.jpg" alt="Women's Shoes">
-            <h3>Men’s Wallet</h3>
-            <span class="new-price">Tk899</span>
+            <img src="https://i.postimg.cc/mk01k867/486712ef-8c7d-4fad-b045-a90ae8905e2f.jpg" alt="Women's Shoes">
+            <h3>Light Low Socks</h3>
+            <span class="new-price">Tk1299</span>
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button>
         </div>
         <div class="category">
