--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -62,17 +62,17 @@
         </div>
 
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/6313196_2_300x.jpg?v=1756803275" alt="Women's Shoes">
-            <h3>Women's Collection</h3>
-            <p>Trendy shoes for women</p><br>
+            <img src="https://i.postimg.cc/6qYc2JNp/5cbce7e7-0bf4-4ff1-b76c-b42cf99a8182.jpg" alt="Women's Shoes">
+            <h3>Women's High Heel</h3>
+            <p>Moochie Women's High Heel</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/0315103_1_1024x1024.jpg?v=1756785469" alt="Kids' Shoes">
-            <h3>Kids' Collection</h3>
-            <p>Comfortable shoes for kids</p><br>
+            <img src="https://i.postimg.cc/9XZrWtYd/467e32a1-021a-4dfa-b652-58f023c55844.jpg" alt="Kids' Shoes">
+            <h3>Women’s Block High Heel</h3>
+            <p>Nino Rossi Women’s Open Block High Heel</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Kids\' Collection')">Add to Cart</button>
@@ -86,69 +86,64 @@
             <button onclick="addToCart('Accessories')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/3618950_2_300x.jpg?v=1756786785" alt="Girls Kids Sandal">
-            <h4>GIRLS KIDS SANDAL</h4>
-            <p>GIRLS KIDS SANDAL</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/52TVYDxn/558b30f3-9f25-4d44-b9af-b99aaa3d0559.jpg" alt="Girls Kids Sandal">
+            <h4>Women's Slipper</h4>
+            <p>Mauch Women's Slipper</p><br>
+            <span class="new-price">Tk1699</span>
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Gm1bS4Qf/photo-2024-08-12-10-33-27.jpg" alt="Air Jordan 4">
-            <h4>Air Jordan 4</h4>
-            <p>Rubber outsole & lace-up closure sneakers</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/kGBsbYMR/b9a8c6dd-a87b-48cb-aa96-455d79df5847.jpg" alt="Air Jordan 4">
+            <h4>Women's Flat Sandal</h4>
+            <p>Nino Rossi Women's Flat Sandal</p><br>
+            <span class="new-price">Tk1290</span>
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Hsmp6J3h/photo-2024-07-09-10-43-32.jpg" alt="Lacoste">
-            <h4>Lacoste || Color – Black & White</h4>
-            <p>Perfect sportswear collection for trainers, walking, running</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
+            <img src="https://i.postimg.cc/QC1KcTP8/3f43f303-1024-403e-90eb-f680cbcfbacc.jpg" alt="Lacoste">
+            <h4>Women's Pump</h4>
+            <p>Nino Rossi Women's Pump</p><br>
+            <span class="new-price">Tk2290</span>
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/hvBqZw8d/photo-2024-08-12-10-17-16.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor</p><br>
+            <img src="https://i.postimg.cc/4NvBg7dC/dd7af4ee-399e-4405-8666-0757692a93af.jpg" alt="Air Jordan 4 White">
+            <h4>Women's Canvas</h4>
+            <p>Sprint Women's Canvas</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/4NRTZw23/photo-2024-10-07-12-11-56.jpgg" alt="Air Jordan 4 White">
-            <h4>Air || Color – White</h4>
-            <p>Exclusive & stylish, perfect for casual outdoor, running or sports sneakers</p><br>
+            <img src="https://i.postimg.cc/vZfMMvnR/369f7c9b-1133-4218-8770-8facd0b7c42f.jpg" alt="Air Jordan 4 White">
+            <h4>Women's Ankle</h4>
+            <p>Moochie Women's Ankle Strap Heel</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://trekntread.com/tenancy/assets/1066/photo_2024-07-06_09-30-13.jpg" alt="Men's Shoes">
-            <h3>Men's Collection</h3>
-            <p>Stylish shoes for men</p><br><br>
+            <img src="https://i.postimg.cc/9MqHYbQp/c16138e2-7745-462e-880e-545987fe4c1c.jpg" alt="Men's Shoes">
+            <h3>Women's Strap Heel</h3>
+            <p>Moochie Women's Ankle Strap Heel</p><br><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Men\'s Collection')">Add to Cart</button>
         </div>
 
         <div class="category">
-            <img src="https://i.postimg.cc/SR2Q5sKt/photo1712123045.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 6 || Colour - White || Low Neck || </h4>
-            <p>Trendy and stylish</p><br>
+            <img src="https://i.postimg.cc/mr8vsqPR/0758AA35-1.jpg" alt="Air Jordan 4 White">
+            <h4>Women's Bucket Bag</h4>
+            <p>Moochie Women's Bucket Bag</p><br>
             <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/x1cr37ct/photo1711860879.jpg" alt="Air Jordan 4 White">
-            <h4>Air Jordan 4 || Color - Red || High Neck || </h4>
-            <p>Comfortable & fashionable</p><br>
-            <span class="new-price">Tk3499</span>
-            <span class="old-price">Tk3899</span>
-            <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
+            <img src="https://i.postimg.cc/0N08Jcr4/0751AA35-1.jpg" alt="Air Jordan 4 White">
+            <h4>Women's Bucket Bag </h4>
+            <p>Moochie Women's Bucket Bag</p><br>
+            <span class="new-price">Tk3699</span>
+            <button onclick="addToCart(Women's Bucket Bag)">Add to Cart</button>
         </div>
       
 
