--- a/products/man/pd_serial_html/p_2.html
+++ b/products/man/pd_serial_html/p_2.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
-  <link rel="stylesheet" href="/Home/index.css">
-  <link rel="stylesheet" href="/products/products.css">
+  <link rel="stylesheet" href="../../../Home/index.css">
+  <link rel="stylesheet" href="../../../products/products.css">
+
+  
 </head>
 
 <body>
