--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -44,15 +44,13 @@
         <!-- <a href="/auth/profile.html"><i class="fa-solid fa-user"></i></a>  -->
              <a href="#" id="profileTrigger"><i class="fa-solid fa-user"></i></a>
 
-
       </div>
     </nav>
   </header>
 
-
-    
     <section class="categories">
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_1.html">
             <img src="../../products/Women/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
