--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -51,7 +51,7 @@
     <section class="categories">
         <div class="category">
             <a href="../../products/Women/pd-sserial/w_1.html">
-            <img src="../../products/Women/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
+            <img src="../../products/Women/pd_img/pd-1.jpg" alt="Air Jordan 4 White"></a>
             <h4>MINDFUL GREY</h4>
             <p>MOONBEAM and Sea Salt</p><br>
             <span class="new-price">Tk3499</span>
