--- a/products/Women/pd-sserial/w_1.html
+++ b/products/Women/pd-sserial/w_1.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <div class="nav-left">
-          <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+          <img src="../../asstes/icons/icon2.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
           <ul>
             <li><a href="#"> Mega Deals</a></li>
@@ -51,7 +51,7 @@
     <div class="container">
       <!-- Left: Product Images -->
       <div class="product-images">
-        <img src="" alt="Main Product">
+        <img src="../../products/Women/pd_img/pd-1.jpg" alt="Main Product">
       </div>
 
       <!-- Right: Product Details -->
