--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -60,6 +60,7 @@
         </div>
 
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_2.html"></a>
             <img src="https://i.postimg.cc/6qYc2JNp/5cbce7e7-0bf4-4ff1-b76c-b42cf99a8182.jpg" alt="Women's Shoes">
             <h3>Women's High Heel</h3>
             <p>Moochie Women's High Heel</p><br>
