--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -60,8 +60,9 @@
         </div>
 
         <div class="category">
-            <a href="../../products/Women/pd-sserial/w_2.html"></a>
+            <a href="../../products/Women/pd-sserial/w_2.html">
             <img src="https://i.postimg.cc/6qYc2JNp/5cbce7e7-0bf4-4ff1-b76c-b42cf99a8182.jpg" alt="Women's Shoes">
+            </a>
             <h3>Women's High Heel</h3>
             <p>Moochie Women's High Heel</p><br>
             <span class="new-price">Tk3499</span>
