--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -70,7 +70,9 @@
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_3.html">
             <img src="https://i.postimg.cc/9XZrWtYd/467e32a1-021a-4dfa-b652-58f023c55844.jpg" alt="Kids' Shoes">
+            </a>
             <h3>Women’s Block High Heel</h3>
             <p>Nino Rossi Women’s Open Block High Heel</p><br>
             <span class="new-price">Tk3499</span>
